--- a/package.json
+++ b/package.json
@@ -13,22 +13,29 @@
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/datetimepicker": "^2.4.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.6.5",
     "@react-navigation/bottom-tabs": "^5.5.1",
     "@react-navigation/drawer": "^5.8.1",
     "@react-navigation/material-bottom-tabs": "^5.2.9",
     "@react-navigation/native": "^5.5.0",
     "@react-navigation/stack": "^5.4.1",
+    "geolib": "^3.3.1",
+    "nanoid": "^3.1.10",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
     "react-native-animated-spinkit": "^1.4.1",
+    "react-native-audio": "^4.3.0",
     "react-native-firebase": "^5.6.0",
+    "react-native-geocoding": "^0.4.0",
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-get-random-values": "^1.4.0",
     "react-native-gifted-chat": "^0.16.1",
     "react-native-image-crop-picker": "^0.31.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "^0.27.1",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-modal-datetime-picker": "^8.7.1",
     "react-native-paper": "^3.10.1",
     "react-native-picker-select": "^7.0.0",
@@ -37,6 +44,7 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
+    "react-native-sound": "^0.11.0",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
